deployments/pathweb/workloads/home-network/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  annotations:
    kustomize.toolkit.fluxcd.io/force: enabled
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name":"hass-iot-network"}]'
    spec:
      priorityClassName: rfhome-home-critical
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-group
                operator: In
                values: [baldric, voyager]
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: home-assistant
              topologyKey: "kubernetes.io/hostname"
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: matter-server
        image: ghcr.io/matter-js/matterjs-server:stable
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        command: ["/usr/local/bin/matter-server.sh"]
        args:
        - --storage-path
        - /data
        - --primary-interface
        - net1
        - --listen-address
        - lo
        - --listen-address
        - eth0
        - --fabricid
        - "2"
        - --vendorid
        - "4939"
        volumeMounts:
        - name: hass-data
          mountPath: /data
          subPath: matter-server
        - name: leader-signal
          mountPath: /signal
        - name: homeassistant-docker-venv
          mountPath: /usr/local/bin/matter-server.sh
          subPath: matter-server.sh
      - name: home-assistant
        image: homeassistant/home-assistant:stable
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8123
          name: http
          protocol: TCP
        volumeMounts:
        - name: hass-data
          mountPath: /config
        - name: hass-data
          mountPath: /venv/
          subPath: venv/
        - name: homeassistant-docker-venv
          mountPath: /etc/services.d/home-assistant/run
          subPath: venv-run
        - name: homeassistant-docker-venv
          mountPath: /usr/local/bin/ha-probe.sh
          subPath: ha-probe.sh
        - name: homeassistant-docker-venv
          mountPath: /usr/local/bin/sync-http-settings.py
          subPath: sync-http-settings.py
        - name: ha-config-extra
          subPath: ha-http-config.yaml
          mountPath: /tmp/ha-http-config/ha-http-config.yaml
          readOnly: true
        - name: ha-config-extra
          subPath: hass-ingress.yaml
          mountPath: /config/packages/hass_ingress_kustomize.yaml
          readOnly: true
        - name: leader-signal
          mountPath: /signal
        resources:
          requests:
            cpu: 200m
            memory: 3500M
          limits:
            memory: 5Gi
        livenessProbe:
          failureThreshold: 60
          periodSeconds: 5
          exec:
            command: ["/usr/local/bin/ha-probe.sh"]
        readinessProbe:
          failureThreshold: 2
          periodSeconds: 5
          exec:
            command: ["/usr/local/bin/ha-probe.sh"]
      volumes:
      - name: hass-data
        persistentVolumeClaim:
          claimName: home-assistant-data
      - name: homeassistant-docker-venv
        configMap:
          name: homeassistant-docker-venv
          defaultMode: 0755
      - name: ha-config-extra
        configMap:
          name: ha-config-extra
          defaultMode: 0644
      - name: leader-signal
        emptyDir:
          medium: Memory
          sizeLimit: 1Mi
