deployments/pathweb/workloads/home-network/home-assistant/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
  annotations:
    kustomize.toolkit.fluxcd.io/force: enabled
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  serviceName: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name":"hass-iot-network"}]'
    spec:
      priorityClassName: rfhome-home-critical
      # runtimeClassName: gvisor
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-group
                operator: In
                values: [baldric, voyager]
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
          # sysctls:
          # - name: net.ipv4.ping_group_range
          #   value: "0 2147483647"
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:stable
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8123
          name: http
          protocol: TCP
        volumeMounts:
        - name: hass-data
          mountPath: /config
        - name: hass-data
          mountPath: /venv/
          subPath: venv/
        - name: homeassistant-docker-venv
          mountPath: /etc/services.d/home-assistant/run
          subPath: venv-run
        resources:
          requests:
            cpu: 200m
            memory: 3500M
          limits:
            memory: 5Gi
        livenessProbe:
          failureThreshold: 30
          periodSeconds: 10
          httpGet:
            port: 8123
            path: /
            scheme: HTTP
        readinessProbe:
          failureThreshold: 30
          periodSeconds: 10
          httpGet:
            port: 8123
            path: /
            scheme: HTTP
        startupProbe:
          failureThreshold: 30
          periodSeconds: 10
          httpGet:
            port: 8123
            path: /
            scheme: HTTP
      volumes:
      - name: hass-data
        persistentVolumeClaim:
          claimName: home-assistant-data
      - name: homeassistant-docker-venv
        configMap:
          name: homeassistant-docker-venv
          defaultMode: 0755
