deployments/pathweb/workloads/home-network/home-assistant/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    external-dns: local-pdns
spec:
  parentRefs:
  - name: rfhome-services-cilium
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - hass.services.home.yrf.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: X-Forwarded-Host
          value: hass.services.home.yrf.me
        - name: X-Forwarded-Proto
          value: https
        - name: X-Forwarded-Port
          value: "443"
    backendRefs:
    - name: home-assistant
      port: 8123
