deployments/pathweb/workloads/home-network/home-assistant/traefik-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-authentik-support
  annotations:
    kubernetes.io/ingress.class: traefik-traefik
spec:
  entryPoints:
  - websecure
  routes:
  # - kind: Rule
  #   match: Host(`hass.services.home.yrf.me`) && PathPrefix(`/outpost.goauthentik.io`)
  #   priority: 100
  #   services:
  #   - kind: Service
  #     name: ak-outpost-authentik-embedded-outpost
  #     port: http
  # - kind: Rule
  #   match: Host(`hass.services.home.yrf.me`) && Path(`/service_worker.js`)
  #   priority: 100
  #   middlewares:
  #   - name: home-assistant-rewrite-serviceworker-paths
  #   services:
  #   - kind: Service
  #     name: home-assistant
  #     port: http
  - kind: Rule
    match: Host(`hass.services.home.yrf.me`) && PathPrefix(`/auth`) && !Path(`/auth/token`)
    priority: 100
    middlewares:
    - name: ak-outpost-authentik-embedded-outpost
    services:
    - kind: Service
      name: home-assistant
      port: http
