deployments/pathweb/workloads/home-network/home-assistant/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: home-assistant-policy
  namespace: home-network
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: '8123'
        protocol: TCP
      rules:
        http: [{}]
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: home-assistant-matter-hub
        io.kubernetes.pod.namespace: home-network
    toPorts:
    - ports:
      - port: '8123'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: traefik
    - matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
        - node-red
        - appdaemon
        - n8n
    toPorts:
    - ports:
      - port: '8123'
        protocol: TCP
      rules:
        http: [{}]
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: music-assistant
        io.kubernetes.pod.namespace: media-services
    toPorts:
    - ports:
      - port: '8123'
        protocol: TCP
      rules:
        http: [{}]
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: bifrost
        io.kubernetes.pod.namespace: ai-lab
    toPorts:
    - ports:
      - port: '8123'
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /api/mcp
        - method: POST
          path: /api/mcp
        - method: DELETE
          path: /api/mcp
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "8080"
        protocol: TCP
      rules:
        http: [{}]
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: node-local-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: traefik
  - toEntities:
    - world
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: vernemq
        app.kubernetes.io/instance: vernemq
    toPorts:
    - ports:
      - port: '8883'
        protocol: TCP
      - port: '1883'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/component: database
        app.kubernetes.io/part-of: rfhome-postgres-ha
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: go2rtc
    - matchLabels:
        app.kubernetes.io/name: faster-whisper
    - matchLabels:
        app.kubernetes.io/name: wyoming-piper
    - matchLabels:
        app.kubernetes.io/name: wyoming-openwakeword
    - matchLabels:
        app.kubernetes.io/name: esphome
    - matchLabels:
        app.kubernetes.io/name: ser2net-serial-zb01
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: music-assistant
        io.kubernetes.pod.namespace: media-services
    toPorts:
    - ports:
      - port: '8095'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: n8n
    toPorts:
    - ports:
      - port: '5678'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: home-network-privileged
        app.kubernetes.io/name: otbr
    toPorts:
    - ports:
      - port: '8081'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: zigbee2mqtt
        io.kubernetes.pod.namespace: home-network
    - matchLabels:
        app.kubernetes.io/name: grocy
        io.kubernetes.pod.namespace: home-network
    toPorts:
    - ports:
      - port: '80'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: slzb-ultima-wg
        io.kubernetes.pod.namespace: home-network-privileged
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
      - port: '8080'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: home-assistant-matter-hub
        io.kubernetes.pod.namespace: home-network
    toPorts:
    - ports:
      - port: '8482'
        protocol: TCP
      rules:
        http: [{}]
