deployments/pathweb/workloads/home-network/home-assistant/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: home-assistant-policy
  namespace: home-network
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    ports:
    - port: 8123
  - from:
    - podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - node-red
          - appdaemon
    ports:
    - port: 8123
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: node-local-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    - ipBlock:
        cidr: ::/0
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: mqtt-broker
    ports:
    - port: 8883
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: database
          app.kubernetes.io/part-of: rfhome-postgres-ha
    ports:
    - port: 5432
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: go2rtc
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: faster-whisper
